[gd_scene load_steps=12 format=3 uid="uid://bynm24s2t8wkr"]

[ext_resource type="Script" uid="uid://biuxptv7ef71s" path="res://Scripts/button.gd" id="1_f6c68"]
[ext_resource type="Script" uid="uid://bahqeij538j6" path="res://Scenes/cps_minigame.gd" id="1_x5jo4"]
[ext_resource type="Texture2D" uid="uid://bjeudwppis32d" path="res://Assets/Art/Bottomless Pit_darker.png" id="2_7doci"]
[ext_resource type="FontFile" uid="uid://cyu1o16vdvn6x" path="res://Assets/Fonts/Symtext.ttf" id="2_hvayr"]
[ext_resource type="Texture2D" uid="uid://dvvdhosvbuy4u" path="res://Assets/Art/Bottomless Pit_RotatedLadder.png" id="2_x5jo4"]
[ext_resource type="AudioStream" uid="uid://bjvdbkiuihrda" path="res://Assets/Music/PopSound.mp3" id="3_hvayr"]
[ext_resource type="FontFile" uid="uid://q1kfaq4hjaog" path="res://Assets/Fonts/ThaleahFat.ttf" id="4_0vnei"]

[sub_resource type="LabelSettings" id="LabelSettings_0vnei"]
font = ExtResource("2_hvayr")
font_size = 30

[sub_resource type="LabelSettings" id="LabelSettings_b2yhh"]
font = ExtResource("4_0vnei")
font_size = 150

[sub_resource type="LabelSettings" id="LabelSettings_7doci"]
font = ExtResource("2_hvayr")
font_size = 100

[sub_resource type="LabelSettings" id="LabelSettings_6iopv"]
font = ExtResource("2_hvayr")
font_size = 20

[node name="CpsMinigame" type="Node2D"]
script = ExtResource("1_x5jo4")

[node name="BottomlessPitLighter" type="Sprite2D" parent="."]
position = Vector2(576, 324)
texture = ExtResource("2_x5jo4")

[node name="BottomlessPitDarker" type="Sprite2D" parent="."]
visible = false
position = Vector2(576, 324)
texture = ExtResource("2_7doci")

[node name="Button" type="Button" parent="."]
offset_left = 201.0
offset_top = 271.0
offset_right = 501.0
offset_bottom = 471.0
theme_override_fonts/font = ExtResource("2_hvayr")
theme_override_font_sizes/font_size = 21
text = "CLICK HERE!
"
script = ExtResource("1_f6c68")

[node name="CPSCounter" type="Label" parent="."]
offset_left = 267.0
offset_top = 172.0
offset_right = 355.0
offset_bottom = 217.0
text = "CPS: "
label_settings = SubResource("LabelSettings_0vnei")

[node name="PopSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_hvayr")

[node name="Countdown" type="Label" parent="."]
visible = false
offset_left = 576.0
offset_top = 241.0
offset_right = 651.0
offset_bottom = 379.0
text = "3"
label_settings = SubResource("LabelSettings_b2yhh")

[node name="TimesUp" type="Label" parent="."]
visible = false
offset_left = 298.0
offset_top = 276.0
offset_right = 899.0
offset_bottom = 424.0
text = "Time's Up!"
label_settings = SubResource("LabelSettings_7doci")

[node name="Instructions" type="Label" parent="."]
visible = false
offset_left = 181.0
offset_top = 47.0
offset_right = 985.0
offset_bottom = 96.0
text = "After the Countodwn, Click as FAST as you can for 5 seconds!"
label_settings = SubResource("LabelSettings_6iopv")

[node name="Goal" type="Label" parent="."]
visible = false
offset_left = 181.0
offset_top = 84.0
offset_right = 985.0
offset_bottom = 133.0
text = "Reach the TOP STEP to escape with ALL your gold"
label_settings = SubResource("LabelSettings_6iopv")
horizontal_alignment = 1

[connection signal="visibility_changed" from="." to="Button" method="_on_cps_minigame_visibility_changed"]
[connection signal="button_down" from="Button" to="Button" method="_on_button_down"]
[connection signal="minigameOver" from="Button" to="." method="_on_button_minigame_over"]
[connection signal="minigameOver" from="Button" to="Button" method="_on_minigame_over"]
